--- a/hugo/content/post/20190626-v4-updates.md
+++ b/hugo/content/post/20190626-v4-updates.md
@@ -12,8 +12,11 @@ There are 2 big changes in v4, and I am sure you already aware of them. Please l
 The first big change is the User Interface (UI). It was simple in v3. And, a bit already overloaded. There was no space to add new features, for example the domain blocking monitor or the status of Blokada and the VPN, and with the requested and planned features, space is very needed. Stretching the UI of v3 would make no good.
 Additionally, we saw the increasing number of users with Android boxes, TVs. Blokada v3 wasn't designed for those devices, navigating with the remote controller wasn't easy at all. To have the same user experience on a phone, on tablet, Android box or TV, a redesign was necessary.
 This is why the new interface is introduced. It seems a bit messy for the first time, but the logic behind is easy to understand, it divided to 3 sections:
+
 - First screen is the main page, with status information about Blokada’s and the VPN's status. If you swipe up from the bottom of the screen, you find the most used switches: the VPN gateway selector and the DNS changer on the right side. As features will be added, you'll find more and more things here.
+
 - Second screen is "Ad blocking", provides you information about what is being allowed or blocked. Swipe up and you can see all the related things: the list of blocked hosts, the individual domain blocks on the second page, the allowed hosts on the 3rd, and so on. System apps can be found on the last page on the right.
+
 - Third screen is what you visit maybe once or twice: Settings. It already shows you a few of them, but the detailed list is available in the submenu if you swipe up.
 You can find a shield in the top left corner on every screen. You can activate and deactivate Blokada with that. The waves, coming out from the shield are representing the domain queries: the light greys are the allowed queries while the orange ones are the blocked. Cool, isn't it?
 
@@ -27,7 +30,7 @@ When you subscribe, you need to provide your e-mail address and, of course, the 
 In the meantime, Blokada remains free and open source, the team works to make the app better and ship all the features to provide you more security, protect your data and privacy.
 
 
-*If you have questions or ideas, join our [Telegram channel](https://go.blokada.org/chat) and let's have a chat!
+*If you have questions or ideas, join our [Telegram channel](https://go.blokada.org/chat) and let's have a chat!*
 
 Sincerely yours,
 The restless Blokada team:
